Use latest parent Added profile for testing as proper module Open the single package to Jackson databind Added GitHub action